[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sairarizvi6", email = "saira.rizvi6@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.17",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
